<resources>
    <string name="app_name">MyCloudMusic</string>
    <string name="cloudmusic">网易云音乐</string>
    <string name="button_login">一键登录</string>
    <string name="tv_service">同意 服务条款、隐私条款、儿童隐私政策</string>
    <string name="next">下一步</string>
    <string name="waitingForLogin">登录体验更多精彩</string>
    <string name="waitingPhone">请输入手机号</string>
    <string name="waitingPassword">请输入密码</string>
    <string name="waitingEmail">请输入163邮箱</string>
    <string name="emailLogin">163邮箱登录</string>
    <string name="ensure">确定</string>
    <string name="waitingCaptcha">请输入验证码</string>
    <string name="send">发送</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my">我的</string>
    <string name="village">云村</string>
    <string name="podcast">播客</string>
    <string name="follow">关注</string>
    <string name="find">发现</string>
</resources>