<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    tools:viewBindingIgnore="true">


    <ImageView
        android:id="@+id/img_login_top2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_login_back"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailLogin"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/img_login_top2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/tv_loginPhone_top_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/waitingForLogin"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <EditText
        android:id="@+id/et_loginEmail_email"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_marginBottom="36dp"
        android:drawableStart="@drawable/ic_login_email"
        android:ems="10"
        android:hint="@string/waitingEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_loginEmail_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <EditText
        android:id="@+id/et_loginEmail_password"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_marginBottom="36dp"
        android:drawableStart="@drawable/ic_login_password"
        android:ems="10"
        android:hint="@string/waitingPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/mbtn_loginEmail_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_loginEmail_bottom"
        android:layout_width="323dp"
        android:layout_height="70dp"
        android:layout_marginBottom="264dp"
        android:backgroundTint="@color/red"
        android:text="@string/ensure"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:rippleColor="@color/gray" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>